# churnguard

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: model_card.md
notebooks/: 01_eda.ipynb
src/churnguard/: __init__.py  api.py  baseline.py  data.py  models.py  permutation_importance.py  predict.py  train.py
